tests/fixtures/fail/for_missing_into_iterator.sc
let Value = struct { value: i32 }

let main(): i32 = {
  for Value { value: 42 } { value ->
    value
  }
  0
}
